--- a/index.html
+++ b/index.html
@@ -14,17 +14,42 @@
 <body>
   <div id="demo">
     <h1>un-sdg</h1>
-    <un-sdg goal = 1></un-sdg>
+    <un-sdg goal="circle" id="random1"></un-sdg>
     <button id="random">Randomize Goal</button>
     <script>
       document.querySelector('#random').addEventListener('click', function(event) {
         const randomNumber = Math.floor(Math.random() * 17) + 1; 
-        const sdg = document.getElementById('random-sdg');
+        const sdg = document.getElementById('random1');
         sdg.setAttribute('goal', randomNumber);
       });
+
+
+      
     </script>
-    
-  <script type="module" src="./src/un-sdg2.js"></script>
+
+    <un-sdg goal="1"></un-sdg>
+    <un-sdg goal="2"></un-sdg>
+    <un-sdg goal="3"></un-sdg>
+    <un-sdg goal="4"></un-sdg>
+    <un-sdg goal="5"></un-sdg>
+    <un-sdg goal="6"></un-sdg>
+    <un-sdg goal="7"></un-sdg>
+    <un-sdg goal="8"></un-sdg>
+    <un-sdg goal="9"></un-sdg>
+    <un-sdg goal="10"></un-sdg>
+    <un-sdg goal="11"></un-sdg>
+    <un-sdg goal="12"></un-sdg>
+    <un-sdg goal="13"></un-sdg>
+    <un-sdg goal="14"></un-sdg>
+    <un-sdg goal="15"></un-sdg>
+    <un-sdg goal="16"></un-sdg>
+    <un-sdg goal="17"></un-sdg>
+    <un-sdg goal="circle"></un-sdg>
+    <un-sdg goal="all"></un-sdg>
+   
+    <un-sdg goal="5" colorOnly="true"></un-sdg>
+
+  <script type="module" src="./src/un-sdg.js"></script>
 
   <!-- Take HAX, the Web and you further down the rabbit hole -->
   
